--- a/popup.css
+++ b/popup.css
@@ -1,84 +1,81 @@
-  
-  h1 {
-    width: 500px;
-    margin:  auto;
-    margin-top: 20px;
-    padding: 20px;
-    border: 1px solid lightgray;
-    border-radius: 10px;
-    background-color: #f2f2f2;
-  }
-  label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="number"] {
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid lightgray;
-    border-radius: 5px;
-    background-color: white;
-  }
-  
-  input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: #4CAF50;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-  }
-  
+h1 {
+  width: 500px;
+  margin: auto;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+}
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"] {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  background-color: white;
+}
+
+input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #4caf50;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+}
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  form {
-    border: 1px solid black;
-    display: flex;
-    background-color: #f2f2f2;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    margin-top: 10px;
-  }
-  
-  label {
-    margin: 10px 0;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="number"] {
-    padding: 10px;
-    font-size: 16px;
-  } 
-  
-  #sub{
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: blue;
-    color: white;
-    border: none;
-    border-radius: 5px;
-  }
-  
-  #webcam-feed {
-   border: 2px solid black;
-    margin-top: 20px;
-    width: 640px;
-    height: 480px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+form {
+  border: 1px solid black;
+  display: flex;
+  background-color: #f2f2f2;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+label {
+  margin: 10px 0;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"] {
+  padding: 10px;
+  font-size: 16px;
+}
+
+#sub {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: blue;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+#webcam-feed {
+  border: 2px solid black;
+  margin-top: 20px;
+  width: 440px;
+  height: 280px;
+}
